# credit-data-fairness

./: .gitignore  README.md  data_metadata.json  features.csv  labels.csv  main.py  pyproject.toml
notebooks/: checkpoint_etapes1_2.pkl  fairness_interpretability_robustness.ipynb  fairness_notebook_Lina.ipynb  khalil_notebook.ipynb
src/: data_import.py  data_preprocessing.py  metrics.py
