[project]
name = "fairness-credit-scores"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fairlearn>=0.12.0",
    "ipykernel>=6.29.0",
    "matplotlib>=3.10.0",
    "nbformat>=5.10.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.0",
    "shap>=0.47.0",
    "ucimlrepo>=0.0.7",
]
